# samsara-tools

./: .eslintrc.js  .gitignore  LUNA_VERSION_UPDATE.md  MIGRATION.md  Makefile  README.md  action.yml  eslint.config.js  example.yml  jest.config.js  mystuff.yaml  package-lock.json  package.json  pull_artifacts.py  pull_banners.py  pull_banners_summary.py  pull_characters.py  pull_hsr_banners.py  pyproject.toml  test_cli.py  tsconfig.json  update.py  vitest.config.ts
.github/workflows/: test-generation.yml  test.yaml  test.yml
legacy/: Makefile  README.md  pull_banners.py  pull_hsr_banners.py  pytest.ini
legacy/samsara/: banners.py  fandom.py  hsr_fandom.py
legacy/tests/: expected_fandom_result.py  mock_fandom_responses.py  mock_query_responses.py
samsara/: artifact_domains.py  artifacts.py  banners.py  banners_new.py  characters.py  fandom.py  find.py  generate.py  hsr_banners.py  hsr_fandom.py  htmldoc.py  search.py
src/: banners.ts  fandom.ts  genshin.ts  hsr-banners.ts  hsr-fandom.ts  hsr.ts  index.ts  output.ts  types.ts
src/__tests__/: banners.test.ts  genshin.test.ts  hsr.test.ts  index.test.ts  output.test.ts  types.test.ts
src/fandom/: api.ts  output.ts  parser.ts  (+1 more)
test/: banners.test.ts  genshin.test.ts  hsr.test.ts  index.test.ts  output.test.ts  types.test.ts
tests/: expected_banner_data.json  expected_banner_results.py  expected_character_data.json  expected_minify_banner_data.json  mock_query_responses.py  test_artifact_domains.py  test_artifacts.py  test_banners.py  test_banners_new.py  test_characters.py  test_fandom.py  test_htmldoc.py
(+15 files in other folders)
