[tool.poetry]
name = "samsara"
version = "0.1.0"
description = ""
authors = ["Benjamin Lei <benlei.cse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
