[tool.poetry]
name = "samsara"
version = "0.1.0"
description = ""
authors = ["Benjamin Lei <benlei.cse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
requests = "^2.28.1"
black = "^22.12.0"
html5lib = "^1.1"
beautifulsoup4 = "^4.11.1"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.12.0"}
pylint = "^2.15.9"
autopep8 = "^2.0.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
