[tool.poetry]
name = "samsara"
version = "1.0.0"
description = ""
authors = ["Benjamin Lei <benlei.cse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
requests = "^2.28.1"
black = "^22.12.0"
pyyaml = "^6.0"
mergedeep = "^1.3.4"
requests-mock = "^1.10.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.12.0"}
pylint = "^2.15.9"
autopep8 = "^2.0.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
